welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:49: error: not found: value avancer
    	avancer()
        ^SlugHunting:55: error: not found: value avancer
      	avancer()
        ^SlugHunting:62: error: not found: value avancer
      		avancer()
                ^